<resources>
    <string name="app_name">Quick Crypt</string>
    <string name="text_quick_crypt">Quick Crypt</string>
    <string name="text_about">About</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_incorrect_password">Incorrect Password</string>
    <string name="text_password_verification">Password Verification</string>
    <string name="text_load_key">Load Key</string>
    <string name="text_close">Close</string>
    <string name="text_copyright">Copyright © 2002-2025 Fujian Centerm Information Co., Ltd.\n All Rights Reserved.</string>
    <string name="text_settings">Settings</string>
    <string name="text_server_url">Server URL</string>
    <string name="text_enter_server_url">Enter Server URL</string>
    <string name="text_api_key">API Key</string>
    <string name="text_enter_api_key">Enter API Key</string>
    <string name="text_api_token">API Token</string>
    <string name="text_enter_api_token">Enter API Token</string>
    <string name="text_key_index">Key Index</string>
    <string name="text_enter_key_index">Enter Key Index</string>
    <string name="text_reset">Reset</string>
    <string name="text_save">Save</string>
    <string name="text_version">Version</string>
    <string name="text_terminal_sn">Terminal SN</string>
    <string name="text_centerm">Centerm</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_server_url_is_required">Server URL is required</string>
    <string name="text_invalid_server_url">Invalid Server URL</string>
    <string name="text_api_key_is_required">API Key is required</string>
    <string name="text_api_token_is_required">API Token is required</string>
    <string name="text_key_index_is_required">Key Index is required</string>
    <string name="text_key_index_must_be_a_number">Key Index must be a number</string>
    <string name="text_settings_saved_successfully">Settings saved successfully</string>
    <string name="text_settings_reset_successfully">Settings reset successfully</string>
</resources>