<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7F7F7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back_arrow_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_server_url"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edittext_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/text_enter_server_url"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_api_key"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edittext_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/text_enter_api_key"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_api_token"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edittext_api_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/edit_text_border"
        android:hint="@string/text_enter_api_token"
        android:padding="12dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_key_index"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editext_key_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:maxLines="1"
        android:maxLength="2"
        android:background="@drawable/edit_text_border"
        android:inputType="number"
        android:text="0"
        android:textSize="18sp"
        android:hint="@string/text_enter_key_index"
        android:padding="12dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:gravity="end"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E0E0E0"
            android:paddingVertical="10dp"
            android:layout_marginRight="12dp"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            android:text="@string/text_reset"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2E2E2E"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/text_save"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
