<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/quick_crypt_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_quick_crypt"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/settings_imageview"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:onClick="onSettingsClick"
        android:padding="6dp"
        app:srcCompat="@drawable/outline_settings_24"
        app:layout_constraintTop_toTopOf="@id/quick_crypt_textview"
        app:layout_constraintBottom_toBottomOf="@id/quick_crypt_textview"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:paddingHorizontal="100dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/home_terminal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_load_key"
        app:layout_constraintTop_toBottomOf="@+id/quick_crypt_textview"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_load_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:background="@drawable/circular_btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        android:text="@string/text_load_key"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/circular_btn_white"
        app:layout_constraintBottom_toTopOf="@+id/copyright_textview"
        android:text="@string/text_about"/>


    <TextView
        android:id="@+id/copyright_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_copyright"
        android:textSize="10sp"
        android:textColor="#999999"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>