<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_about_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/text_password_verification"
        android:background="@color/grey200"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:paddingLeft="19dp"
        android:background="@drawable/edit_text_border"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAllCaps="false"
            android:paddingHorizontal="30dp"
            android:background="@drawable/circular_btn_white"
            app:layout_constraintBottom_toTopOf="@+id/copyright_textview"
            android:text="@string/text_cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAllCaps="false"
            android:paddingHorizontal="30dp"
            android:textColor="@color/white"
            android:background="@drawable/circular_btn"
            android:text="@string/text_confirm"/>

    </LinearLayout>

</LinearLayout>
